@@ -4,7 +4,7 @@ using System.Runtime.InteropServices;
 // General Information about an assembly is controlled through the following 
 // set of attributes. Change these attribute values to modify the information
 // associated with an assembly.
-[assembly: AssemblyTitle("BrawlCrateLib v0.14")]
+[assembly: AssemblyTitle("BrawlCrateLib v0.14.3")]
 [assembly: AssemblyDescription("")]
 [assembly: AssemblyConfiguration("")]
 [assembly: AssemblyCompany("")]
@@ -33,4 +33,4 @@ BrawlLib Copyright © 2009 - 2018 Bryan Moulton, BlackJax96, libertyernie && Sam
 // by using the '*' as shown below:
 // [assembly: AssemblyVersion("1.0.*")]
 [assembly: AssemblyVersion("0.14.*")]
-[assembly: AssemblyFileVersion("0.14.2.0")]
+[assembly: AssemblyFileVersion("0.14.3.0")]
