@@ -16,6 +16,13 @@ they be held accountable for the manner in which it is used.
 |************ BrawlCrate Change Log ************|
  ===============================================
  
+ - BrawlCrate v0.14 Hotfix 3 - (10/29/2018)
+ . Updater no longer requires admin approval (unless of course you installed BrawlCrate somewhere that needs admin privileges to write to)
+ . Fixes bug in which documentation updates were being downloaded even when the program said it was going to download the actual update
+ . Documentation updates now give a success message on completion
+ . Improved wording on documentation updater
+ . Deleting an annotation's description now properly clears the annotation
+ 
  - BrawlCrate v0.14 Hotfix 2 - (10/26/2018)
  . Updater now reopens the program after installation
  . "Update.exe" is now deleted when the program opens to conserve space
